--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,9 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 dependencies:
   cupertino_icons: ^1.0.6
+  firebase_analytics: ^10.8.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
