--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,19 +5,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 environment:
   sdk: '>=3.4.0 <4.0.0'
 dependencies:
+  cached_network_image: ^3.4.1
   cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.6
+  eva_icons_flutter: ^3.1.0
   firebase_analytics: ^10.8.0
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
   get_it: ^7.7.0
   go_router: ^14.2.7
   google_fonts: ^6.2.1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_lints: ^3.0.0
