--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,14 @@ dependencies:
   firebase_storage: ^11.6.0
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.0
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
+  gap: ^3.0.1
   get_it: ^7.7.0
   go_router: ^14.2.7
   google_fonts: ^6.2.1
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
