--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   skeletonizer: ^1.4.2
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
