--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: greenvoice
 description: "A Flutter app that empowers citizens to participate in local
   governance and community projects."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ">=3.4.0 <4.0.0"
 dependencies:
   cached_network_image: ^3.4.1
   cloud_firestore: ^4.14.0
@@ -18,13 +18,14 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
+  fluttertoast: ^8.2.8
   gap: ^3.0.1
   get_it: ^7.7.0
   go_router: ^14.2.7
   google_fonts: ^6.1.0
-  intl_phone_field: ^3.2.0
   image_picker: ^1.1.2
   intl: ^0.19.0
+  intl_phone_field: ^3.2.0
   skeletonizer: ^1.4.2
 
 dev_dependencies:
