--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,14 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
+  fluttertoast: ^8.2.8
+  gap: ^3.0.1
   get_it: ^7.7.0
   go_router: ^14.2.7
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   intl: ^0.19.0
+  intl_phone_field: ^3.2.0
   skeletonizer: ^1.4.2
 
 dev_dependencies:
