--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 environment:
   sdk: '>=3.4.0 <4.0.0'
 dependencies:
+  animated_snack_bar: ^0.4.0
   cached_network_image: ^3.4.1
   cloud_firestore: ^4.14.0
   cupertino_icons: ^1.0.6
