--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   intl: ^0.19.0
+  mapbox_maps_flutter: ^2.2.1
   skeletonizer: ^1.4.2
 
 dev_dependencies:
