--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
+  mapbox_maps_flutter: ^2.2.1
   skeletonizer: ^1.4.2
 
 dev_dependencies:
