--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mapbox_maps_flutter: ^2.2.1
   intl_phone_field: ^3.2.0
   skeletonizer: ^1.4.2
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
