--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   intl: ^0.19.0
   mapbox_maps_flutter: ^2.2.1
   intl_phone_field: ^3.2.0
-  mapbox_maps_flutter: ^2.2.1
   skeletonizer: ^1.4.2
   geolocator: ^13.0.1
+  uni_links2: ^0.6.0+2
 
 dev_dependencies:
   flutter_lints: ^3.0.0
