--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,9 +33,9 @@ target 'Runner' do
 
   pod 'FirebaseFirestore',
     :git => 'https://github.com/invertase/firestore-ios-sdk-frameworks.git',
-    :tag => '10.22.0'
+    :tag => '11.0.0'
 
-  $FirebaseSDKVersion = '10.22.0'
+#   $FirebaseSDKVersion = '10.22.0'
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
