--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   animated_snack_bar: ^0.4.0
   cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
   cloud_firestore: ^5.4.2
   cupertino_icons: ^1.0.6
   eva_icons_flutter: ^3.1.0
@@ -38,7 +39,7 @@ dependencies:
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
   uni_links2: ^0.6.0+2
-  flutter_image_compress: ^2.3.0
+
 
 dev_dependencies:
   flutter_lints: ^4.0.0
