--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  flutter_branch_sdk: ^8.2.0
   flutter_image_compress: ^2.3.0
   flutter_location_search:
     git:
@@ -35,7 +36,9 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
+  lottie: ^3.1.2
   mapbox_maps_flutter: ^2.2.1
+  share_plus: ^10.0.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
   uni_links2: ^0.6.0+2
