Deep Link Setup (Done)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.0
+  flutter_branch_sdk: ^8.2.0
   flutter_image_compress: ^2.3.0
   flutter_location_search:
     git:
@@ -38,6 +39,9 @@ dependencies:
   isar: ^3.1.0+1
   mapbox_maps_flutter: ^2.2.1
   path_provider: ^2.1.4
+  lottie: ^3.1.2
+  mapbox_maps_flutter: ^2.2.1
+  share_plus: ^10.0.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
   uni_links2: ^0.6.0+2
