--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   lottie: ^3.1.2
   mapbox_maps_flutter: ^2.2.1
   share_plus: ^10.0.2
+  isar: ^3.1.0+1
+  mapbox_maps_flutter: ^2.2.1
+  path_provider: ^2.1.4
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
   uni_links2: ^0.6.0+2
