--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,7 @@ dependencies:
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
   isar: ^3.1.0+1
-  mapbox_maps_flutter: ^2.2.1
-  path_provider: ^2.1.4
+  isar_flutter_libs: ^3.1.0+1
   lottie: ^3.1.2
   mapbox_maps_flutter: ^2.2.1
   share_plus: ^10.0.2
