--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   lottie: ^3.1.2
   mapbox_maps_flutter: ^2.2.1
+  path_provider: ^2.1.4
   share_plus: ^10.0.2
   shared_preferences: ^2.3.2
   skeletonizer: ^1.4.2
@@ -45,9 +48,11 @@ dependencies:
 
 
 dev_dependencies:
+  build_runner: ^2.4.11
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0+1   
 flutter:
   uses-material-design: true
   assets:
