--- a/firebase.json
+++ b/firebase.json
@@ -1,46 +1,24 @@
 {
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "greenvoiceapp",
-          "appId": "1:870660907182:android:0340cfe22f5aa962354d3f",
-          "fileOutput": "android/app/google-services.json"
+    "hosting": {
+        "source": ".",
+        "ignore": [
+            "firebase.json",
+            "**/.*",
+            "**/node_modules/**"
+        ],
+        "headers": [
+            {
+                "source": "**",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache"
+                    }
+                ]
+            }
+        ],
+        "frameworksBackend": {
+            "region": "us-central1"
         }
-      },
-      "ios": {
-        "default": {
-          "projectId": "greenvoiceapp",
-          "appId": "1:870660907182:ios:a645648fa7337b8e354d3f",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "greenvoiceapp",
-          "configurations": {
-            "ios": "1:870660907182:ios:a645648fa7337b8e354d3f"
-          }
-        }
-      }
     }
-  },
-  "hosting": {
-    "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "us-east1"
-    }
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "frameworksBackend": {
-    "region": "us-east1"
-  }
 }
