--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,23 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.11
+  flutter_launcher_icons: ^0.14.0
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  isar_generator: ^3.1.0+1   
+  isar_generator: ^3.1.0+1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app-icon.jpg"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icons/app-icon.jpg"
+    background_color: "#FFFFF"
+    theme_color: "#187330"
+
 flutter:
   uses-material-design: true
   assets:
