--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 dependencies:
   animated_snack_bar: ^0.4.0
+  animations: ^2.0.11
   cached_network_image: ^3.4.1
   carousel_slider: ^5.0.0
   cloud_firestore: ^5.4.2
