--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ doc/api/
 # dotenv environment variables file
 .env*
 
+# Web related files
+lib/src/services/web_service.dart
+lib/src/models/user/user_model.g.dart
+
 # Avoid committing generated Javascript files:
 *.dart.js
 *.info.json      # Produced by the --dump-info flag.
