--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,11 +5,36 @@ allprojects {
     }
 }
 
-rootProject.buildDir = "../build"
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
+ext {
+    compileSdkVersion   = 34
+    targetSdkVersion    = 34
+    appCompatVersion    = "1.7.0"
 }
+
+rootProject.buildDir = "../build"
+
 subprojects {
+     //  fix for verifyReleaseResources
+  // ============
+  afterEvaluate { project ->
+    if (project.plugins.hasPlugin("com.android.application") ||
+      project.plugins.hasPlugin("com.android.library")) {
+      project.android {
+        compileSdkVersion 34
+        buildToolsVersion "34.0.0"
+      }
+    }
+    if (project.hasProperty("android")) {
+      project.android {
+        if (namespace == null) {
+          namespace project.group
+        }
+      }
+    }
+  }
+  // ============
+  
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
     project.evaluationDependsOn(":app")
 }
 
