Fix Map and App running issues

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,10 +29,15 @@ if (flutterVersionName == null) {
 android {
     namespace = "com.greenvoice.app"
     compileSdk = rootProject.ext.compileSdkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
