--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   get_it: ^7.7.0
   go_router: ^14.2.7
   google_fonts: ^6.2.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   image_picker: ^1.1.2
   intl: ^0.19.0
   intl_phone_field: ^3.2.0
@@ -57,6 +59,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
   isar_generator: ^3.1.0+1
 
 flutter_launcher_icons:
