--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.2
+  flutter_web_frame: ^1.0.0
   fluttertoast: ^8.2.8
   gap: ^3.0.1
   geolocator: ^13.0.1
